--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "url": "https://github.com/agsh/rtsp-ffmpeg.git"
   },
   "devDependencies": {
-    "socket.io": ">=2.1",
-    "express": ">=4.5"
+    "express": ">=4.5",
+    "socket.io": "^4.0.1"
   }
 }
